Interim-Invoice erstellen
Status INTERIM

Totals + Tax

UI + Success Message

Anzeige in Liste